# Scout.V0

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  README.md  main.py  pyproject.toml  requirements.txt
examples/: example_jd.txt  example_resume.txt  quickstart.sh
scout/: __init__.py  cli.py  core.py  logger.py  schemas.py
