[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "scout-v0"
version = "0.1.0"
description = "Resume and Job Description Gap Analysis Tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pranav Munigala", email = "pranav@example.com"}
]
dependencies = [
    "typer[all]==0.9.0",
    "pydantic==2.5.0",
    "instructor==1.0.4",
    "google-generativeai==0.3.0",
    "pymupdf==1.23.8",
]

[project.scripts]
scout = "scout.cli:app"

[tool.setuptools]
packages = ["scout"]
